--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,15 @@
-body{
-  background-color: red;
+@use 'header';
+@use 'outros';
+@use 'footer';
+@use 'variaveis';
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  list-style: none;
+  font-family: 'Roboto', sans-serif;
+}
+.container{
+  padding: 20px 50px;
 }
