--- a/src/styles/_variaveis.scss
+++ b/src/styles/_variaveis.scss
@@ -3,4 +3,8 @@ $fundo1:cadetblue;
 $fundo2:#6c5ce7;
 $fundo3:#00b894;
 $fundo4:#636e72;
+$fundo5:#04daaf6b;
+$fundo6:#6c5ce766;
+$fundo7:#636e725a;
+$fundo8:rgba(95, 158, 160, 0.454);
 $textColor:#fff;
