--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,7 @@
 @use 'outros';
 @use 'footer';
 @use 'variaveis';
+@use 'melioda';
 
 *{
   margin: 0;
@@ -9,7 +10,33 @@
   box-sizing: border-box;
   list-style: none;
   font-family: 'Roboto', sans-serif;
+  text-decoration: none;
 }
 .container{
   padding: 20px 50px;
+}
+.fundo1{
+  background-color: variaveis.$fundo1;
+ }
+ .fundo2{
+   background-color: variaveis.$fundo2;
+
+ }
+ .fundo3{
+   background-color: variaveis.$fundo3;
+ }
+ .fundo4{
+   background-color: variaveis.$fundo4;
+ }
+ .fundo5{
+  background-color: variaveis.$fundo5;
+}
+.fundo6{
+  background-color: variaveis.$fundo6;
+}
+.fundo7{
+  background-color: variaveis.$fundo7;
+}
+.fundo8{
+  background-color: variaveis.$fundo8;
 }
