--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,6 +11,7 @@
   list-style: none;
   font-family: 'Roboto', sans-serif;
   text-decoration: none;
+  overflow-x: none;
 }
 .container{
   padding: 20px 50px;
